--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,7 +1,7 @@
 :root {
-  --primary: #ebc908;
+  --primary: #000;
   --primary-text: #ffffff;
-  --secondary: #ff1dec;
+  --secondary: #FBF236;
   --secondary-text: #ffffff;
   --accent: #505050;
   --accent-text: #ffffff;
